--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
-dash==2.14.2
-plotly==5.18.0
-pandas==1.5.3
-gunicorn==20.1.0
-dash-mantine-components==0.12.1
-dash-iconify==0.1.2
+# Web framework
+fastapi==0.110.0
+uvicorn[standard]==0.29.0
+
+# Database support
+SQLAlchemy==2.0.29
+asyncpg==0.29.0     # Voor PostgreSQL (async driver)
+aiosqlite==0.20.0   # Voor SQLite (alleen voor testing)
+
+# Alembic voor database migraties
+alembic==1.13.1
+
+# Pydantic voor data-validatie
+pydantic==2.6.4
+pydantic-settings==2.2.1
+
+# Optioneel: python-dotenv voor .env-bestanden
+python-dotenv==1.0.1
+
