--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,5 @@
-# Web framework
-fastapi==0.110.0
-uvicorn[standard]==0.29.0
-
-# Database support
-SQLAlchemy==2.0.29
-asyncpg==0.29.0     # Voor PostgreSQL (async driver)
-aiosqlite==0.20.0   # Voor SQLite (alleen voor testing)
-
-# Alembic voor database migraties
-alembic==1.13.1
-
-# Pydantic voor data-validatie
-pydantic==2.6.4
-pydantic-settings==2.2.1
-
-# Optioneel: python-dotenv voor .env-bestanden
-python-dotenv==1.0.1
-
+# Installeer alle benodigde packages
+pip install flask==2.3.3 flask-login==0.6.2 flask-sqlalchemy==3.1.1 flask-wtf==1.2.1 \
+    gunicorn==23.0.0 psycopg2-binary==2.9.9 requests==2.31.0 routes==2.5.1 \
+    sendgrid==6.10.0 sqlalchemy==2.0.27 trafilatura==1.6.3 Werkzeug==2.3.7 \
+    email-validator==2.1.0.post1
